hcc/tests/conform/errors/parse/unterminated_char.hc
//@ error: unterminated character constant
#include <stdlib.hh>
U0 Main()
{
  I64 c = 'ab;
}
